changes to landing page