@@ -6,7 +6,7 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.UUID;
 
 import org.springframework.beans.factory.annotation.Value;
@@ -39,7 +39,7 @@ public class FileServicesIMP implements FileServices {
             f.mkdir();
         }
         //file copy
-        Files.copy(file.getInputStream(), Paths.get(filePath));
+        Files.copy(file.getInputStream(), Path.of(filePath));
         return fileName1;
 
     }
